* fix labels especially on mobile

--- a/assets/styles/forms.css
+++ b/assets/styles/forms.css
@@ -72,7 +72,7 @@ input[type='submit'][disabled] {
 }
 
 .fieldset label {
-  @apply text-accent-2 font-bold text-xs px-4 sm:px-8;
+  @apply text-accent-2 font-bold text-xs;
 }
 
 .check {
